--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,23 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFD700" />
     <meta
       name="description"
       content="JadongPay - Révolutionner le paysage financier à travers un écosystème de récompenses innovant"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#FFD700">
+    <meta name="msapplication-TileColor" content="#FFD700">
+    <link rel="manifest" href="/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>JadongPay - JPAY Token</title>
+    <!-- Force favicon refresh -->
+    <link rel="shortcut icon" href="/favicon.ico?v=2" />
   </head>
   <body class="jadongpay-theme">
     <noscript>Vous devez activer JavaScript pour exécuter cette application.</noscript>
